--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,18 @@ readme = "./blog/2022-10/2022-10-01-first-post.rst"
 packages = []
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
 ablog = "^0.10.29"
 sphinx-autobuild = "^2021.3.14"
 myst-parser = "^0.18.1"
 sphinx-rtd-theme = "^1.0.0"
 sphinxcontrib-napoleon = "^0.7"
 sphinx-autodoc-typehints = "^1.19.4"
+bokeh-plot = "^0.1.22"
+matplotlib = "^3.6.0"
+pandas = "^1.5.0"
+ipython = "^8.5.0"
+jupyter-sphinx = "^0.4.0"
 
 
 
